# BCQN_TET

./: CMakeLists.txt
src/bcqn/: CMakeLists.txt  main.cpp
src/tet_reader/: CMakeLists.txt  main.cpp  tet_reader.cpp  tet_reader.h
tests/: CMakeLists.txt  mainTest.cpp
